--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,8 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Brandon Lewis</title>
+    <script src='https://cdn.tailwindcss.com'></script>
   </head>
-  <body>
+  <body class="bg-[#e5e3db]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
